vapi/raygui.vapi


    //----------------------------------------------------------------------------------
    // Icons enumeration
    //----------------------------------------------------------------------------------
    [CCode (cname = "int", cprefix = "ICON_", has_type_id = false)]
    public enum IconName {
        NONE,
        FOLDER_FILE_OPEN,
        FILE_SAVE_CLASSIC,
        FOLDER_OPEN,
        FOLDER_SAVE,
        FILE_OPEN,
        FILE_SAVE,
        FILE_EXPORT,
        FILE_ADD,
        FILE_DELETE,
        FILETYPE_TEXT,
        FILETYPE_AUDIO,
        FILETYPE_IMAGE,
        FILETYPE_PLAY,
        FILETYPE_VIDEO,
        FILETYPE_INFO,
        FILE_COPY,
        FILE_CUT,
        FILE_PASTE,
        CURSOR_HAND,
        CURSOR_POINTER,
        CURSOR_CLASSIC,
        PENCIL,
        PENCIL_BIG,
        BRUSH_CLASSIC,
        BRUSH_PAINTER,
        WATER_DROP,
        COLOR_PICKER,
        RUBBER,
        COLOR_BUCKET,
        TEXT_T,
        TEXT_A,
        SCALE,
        RESIZE,
        FILTER_POINT,
        FILTER_BILINEAR,
        CROP,
        CROP_ALPHA,
        SQUARE_TOGGLE,
        SYMMETRY,
        SYMMETRY_HORIZONTAL,
        SYMMETRY_VERTICAL,
        LENS,
        LENS_BIG,
        EYE_ON,
        EYE_OFF,
        FILTER_TOP,
        FILTER,
        TARGET_POINT,
        TARGET_SMALL,
        TARGET_BIG,
        TARGET_MOVE,
        CURSOR_MOVE,
        CURSOR_SCALE,
        CURSOR_SCALE_RIGHT,
        CURSOR_SCALE_LEFT,
        UNDO,
        REDO,
        REREDO,
        MUTATE,
        ROTATE,
        REPEAT,
        SHUFFLE,
        EMPTYBOX,
        TARGET,
        TARGET_SMALL_FILL,
        TARGET_BIG_FILL,
        TARGET_MOVE_FILL,
        CURSOR_MOVE_FILL,
        CURSOR_SCALE_FILL,
        CURSOR_SCALE_RIGHT_FILL,
        CURSOR_SCALE_LEFT_FILL,
        UNDO_FILL,
        REDO_FILL,
        REREDO_FILL,
        MUTATE_FILL,
        ROTATE_FILL,
        REPEAT_FILL,
        SHUFFLE_FILL,
        EMPTYBOX_SMALL,
        BOX,
        BOX_TOP,
        BOX_TOP_RIGHT,
        BOX_RIGHT,
        BOX_BOTTOM_RIGHT,
        BOX_BOTTOM,
        BOX_BOTTOM_LEFT,
        BOX_LEFT,
        BOX_TOP_LEFT,
        BOX_CENTER,
        BOX_CIRCLE_MASK,
        POT,
        ALPHA_MULTIPLY,
        ALPHA_CLEAR,
        DITHERING,
        MIPMAPS,
        BOX_GRID,
        GRID,
        BOX_CORNERS_SMALL,
        BOX_CORNERS_BIG,
        FOUR_BOXES,
        GRID_FILL,
        BOX_MULTISIZE,
        ZOOM_SMALL,
        ZOOM_MEDIUM,
        ZOOM_BIG,
        ZOOM_ALL,
        ZOOM_CENTER,
        BOX_DOTS_SMALL,
        BOX_DOTS_BIG,
        BOX_CONCENTRIC,
        BOX_GRID_BIG,
        OK_TICK,
        CROSS,
        ARROW_LEFT,
        ARROW_RIGHT,
        ARROW_DOWN,
        ARROW_UP,
        ARROW_LEFT_FILL,
        ARROW_RIGHT_FILL,
        ARROW_DOWN_FILL,
        ARROW_UP_FILL,
        AUDIO,
        FX,
        WAVE,
        WAVE_SINUS,
        WAVE_SQUARE,
        WAVE_TRIANGULAR,
        CROSS_SMALL,
        PLAYER_PREVIOUS,
        PLAYER_PLAY_BACK,
        PLAYER_PLAY,
        PLAYER_PAUSE,
        PLAYER_STOP,
        PLAYER_NEXT,
        PLAYER_RECORD,
        MAGNET,
        LOCK_CLOSE,
        LOCK_OPEN,
        CLOCK,
        TOOLS,
        GEAR,
        GEAR_BIG,
        BIN,
        HAND_POINTER,
        LASER,
        COIN,
        EXPLOSION,
        1UP,
        PLAYER,
        PLAYER_JUMP,
        KEY,
        DEMON,
        TEXT_POPUP,
        GEAR_EX,
        CRACK,
        CRACK_POINTS,
        STAR,
        DOOR,
        EXIT,
        MODE_2D,
        MODE_3D,
        CUBE,
        CUBE_FACE_TOP,
        CUBE_FACE_LEFT,
        CUBE_FACE_FRONT,
        CUBE_FACE_BOTTOM,
        CUBE_FACE_RIGHT,
        CUBE_FACE_BACK,
        CAMERA,
        SPECIAL,
        LINK_NET,
        LINK_BOXES,
        LINK_MULTI,
        LINK,
        LINK_BROKE,
        TEXT_NOTES,
        NOTEBOOK,
        SUITCASE,
        SUITCASE_ZIP,
        MAILBOX,
        MONITOR,
        PRINTER,
        PHOTO_CAMERA,
        PHOTO_CAMERA_FLASH,
        HOUSE,
        HEART,
        CORNER,
        VERTICAL_BARS,
        VERTICAL_BARS_FILL,
        LIFE_BARS,
        INFO,
        CROSSLINE,
        HELP,
        FILETYPE_ALPHA,
        FILETYPE_HOME,
        LAYERS_VISIBLE,
        LAYERS,
        WINDOW,
        HIDPI,
        FILETYPE_BINARY,
        HEX,
        SHIELD,
        FILE_NEW,
        FOLDER_ADD,
        ALARM,
        CPU,
        ROM,
        STEP_OVER,
        STEP_INTO,
        STEP_OUT,
        RESTART,
        BREAKPOINT_ON,
        BREAKPOINT_OFF,
        BURGER_MENU,
        CASE_SENSITIVE,
        REG_EXP,
        FOLDER,
        FILE,
        SAND_TIMER,
        WARNING,
        HELP_BOX,
        INFO_BOX,
        PRIORITY,
        LAYERS_ISO,
        LAYERS2,
        MLAYERS,
        MAPS,
        HOT,
        LABEL,
        NAME_ID,
        SLICING,
        MANUAL_CONTROL,
        COLLISION,
        CIRCLE_ADD,
        CIRCLE_ADD_FILL,
        CIRCLE_WARNING,
        CIRCLE_WARNING_FILL,
        BOX_MORE,
        BOX_MORE_FILL,
        BOX_MINUS,
        BOX_MINUS_FILL,
        UNION,
        INTERSECTION,
        DIFFERENCE,
        SPHERE,
        CYLINDER,
        CONE,
        ELLIPSOID,
        CAPSULE,
        [CCode (cname = "ICON_250")]
        I_250,
        [CCode (cname = "ICON_251")]
        I_251,
        [CCode (cname = "ICON_252")]
        I_252,
        [CCode (cname = "ICON_253")]
        I_253,
        [CCode (cname = "ICON_254")]
        I_254,
        [CCode (cname = "ICON_255")]
        I_255
    } // GuiIconName
}
